<?xml version="1.0" encoding="UTF-8"?>
<ScrollView android:layout_width="300.0sp" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/fields" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/wifi_direct_device_name" style="\?android:attr/textAppearanceSmallInverse" />
            <EditText android:id="@id/ssid" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:inputType="textNoSuggestions" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/wifi_password" style="\?android:attr/textAppearanceSmallInverse" /> />
<EditText android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true" android:singleLine="true" android:maxLength="200" />
            <TextView android:textSize="12.0sp" android:id="@id/hint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0sp" android:text="@string/wifi_direct_password_summary" style="\?android:attr/textAppearanceSmallInverse" />
            <CheckBox android:id="@id/show_password" android:layout_width="fill_parent" android:layout_height="30.0dip" android:text="@string/wifi_show_password" style="\?android:attr/textAppearanceSmallInverse" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/info" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>